[package]
name = "wineventhook"
version = "0.8.0"
description = "A rusty wrapper over SetWinEventHook and UnhookWinEvent."
readme = "README.md"
repository = "https://github.com/OpenByteDev/wineventhook-rs" 
homepage = "https://github.com/OpenByteDev/wineventhook-rs"
documentation = "https://docs.rs/wineventhook"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2021"
categories = ["os", "os::windows-apis", "accessibility"]
keywords = ["window", "event", "hook", "UnhookWinEvent", "SetWinEventHook"]

[dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "sysinfoapi"], default-features = false }
num_enum = { version = "0.7", default-features = false }
bitflags = { version = "2.4", default-features = false }
async-thread = { version = "0.1", default-features = false }
cstr = { version = "0.2", default-features = false }
tokio = { version = "1.36", features = ["sync"], default-features = false }

[dev-dependencies]
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "macros"], default-features = false }
winapi = { version = "0.3", features = ["errhandlingapi"], default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
