[package]
name = "wineventhook"
version = "0.11.0"
description = "A rusty wrapper over SetWinEventHook and UnhookWinEvent."
readme = "README.md"
repository = "https://github.com/OpenByteDev/wineventhook-rs" 
homepage = "https://github.com/OpenByteDev/wineventhook-rs"
documentation = "https://docs.rs/wineventhook"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2024"
categories = ["os", "os::windows-apis", "accessibility"]
keywords = ["window", "event", "hook", "UnhookWinEvent", "SetWinEventHook"]

[dependencies]
windows-sys = { version = ">=0.59, <=0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_SystemInformation"
], default-features = false }
num_enum = { version = "0.7", default-features = false }
bitflags = { version = "2.11", default-features = false }
async-thread = { version = "0.1", default-features = false }
tokio = { version = "1.49", features = ["sync"], default-features = false }
derive_destructure2 = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"], default-features = false }
windows-sys = { version = ">=0.59, <=0.61", features = ["Win32_System_Threading"], default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
